--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -40,13 +40,20 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
   
-  # assets:
-  #   - images/
-  #   - icons/
+  assets:
+    - assets/images/
+
+flutter_icons:
+  android: true
+  ios: false
+  image_path: "assets/images/logo.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/images/logo.png"
   
   # fonts:
   #   - family: Inter
