--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,7 +24,7 @@ opencv-python-headless==4.9.0.80
 
 # Almacenamiento en la nube
 boto3==1.34.34  # Para S3/R2
-supabase==2.3.4  # Para Supabase Storage
+supabase==2.10.0  # Para Supabase Storage (versión actualizada)
 
 # Tareas asíncronas
 celery==5.3.6
@@ -40,5 +40,5 @@ pandas==2.2.0
 openpyxl==3.1.2
 
 # Utilidades
-httpx==0.25.2  # Compatible con supabase
+httpx>=0.24.0
 python-dateutil==2.8.2
